--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -15,61 +15,46 @@
 </head>
 
 <body>
-	<header>
-		<button type="button" class="btn btn-default" class="btn-toggle"
-			data-element="#menu" id="idMostrarMenu">
-			<i class="material-icons">menu</i>
-		</button>
-		Água+
-	</header>
 
+	<div class="col-xs-5">
+	<nav id="nav-btn" onclick="slidetoggle()">
+ <i class="material-icons">menu</i>
+</nav>
+</div>
+<div class="col-xs-7">
+  <h3>Água+</h3>
+</div>
 
-	<br>
-	<!--MENU-->
-	<div class="menu col-xs-5">
-		<ul class="nav nav-pills nav-stacked">
+<section id="nav-slide">
+  
+    <ul class="nav nav-pills nav-stacked">
 
-			<li role="presentation" class="active"><a href="#" id="btnHome">Home</a></li>
-			<li role="presentation"><a href="#" id="btnPqEconomizar">Por
-					que economizar?</a></li>
-			<li role="presentation"><a href="#" id="btnComoEcon">Como
-					economizar?</a></li>
-			<li role="presentation"><a href="#" id="btnCalcule">Calcule
-					seu consumo</a></li>
-		</ul>
-	</div>
+      <li role="presentation" class="active"><a href="#" id="btnHome">Home</a></li>
+      <li role="presentation"><a href="#" id="btnPqEconomizar">Por
+          que economizar?</a></li>
+      <li role="presentation"><a href="#" id="btnComoEcon">Como
+          economizar?</a></li>
+      <li role="presentation"><a href="#" id="btnCalcule">Calcule
+          seu consumo</a></li>
+    </ul>
+  
+</section>
 	<!--FIM DO MENU-->
 
-	<div class="jumbotron col-xs-7">
+	<div class="jumbotron">
 
 		<div id="idHome">
 
 			<!--CONTEUDO DO HOME-->
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Suspendisse sodales nunc eget tellus lacinia interdum. Nulla vitae
-				cursus felis. Suspendisse potenti. Nam et lorem in lectus
-				sollicitudin molestie. Nunc non quam neque. Nulla ut lorem lectus.
-				Praesent in hendrerit arcu. Suspendisse potenti. Integer eros ex,
-				dignissim vitae neque quis, tincidunt molestie orci. Aliquam
-				imperdiet massa at mollis efficitur. Donec eu metus tempus felis
-				egestas molestie nec id erat. Etiam aliquam dolor nec quam tempor
-				euismod.</P>
+			<p>Com o app Água+, você ficará por dentro de todas as novidades sobre economia de água.</P>
 
 		</div>
-
+    <br>
 		<div id="idPqEconomizar">
 
 			<!--CONTEUDO DA TELA PQ ECONOMIZAR-->
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Suspendisse sodales nunc eget tellus lacinia interdum. Nulla vitae
-				cursus felis. Suspendisse potenti. Nam et lorem in lectus
-				sollicitudin molestie. Nunc non quam neque. Nulla ut lorem lectus.
-				Praesent in hendrerit arcu. Suspendisse potenti. Integer eros ex,
-				dignissim vitae neque quis, tincidunt molestie orci. Aliquam
-				imperdiet massa at mollis efficitur. Donec eu metus tempus felis
-				egestas molestie nec id erat. Etiam aliquam dolor nec quam tempor
-				euismod.</p>
+			<p>Estudos sobre o sistema hídrico mundial são unânimes em indicar que, se a média de consumo global de água não diminuir no curto prazo, teremos problemas de escassez. O Brasil, que tem uma parcela significativa de água doce, também está ameaçado.</p>
 
 		</div>
 
@@ -99,8 +84,7 @@
 				euismod.</p>
 		</div>
 	</div>
-	<footer>
-		<p>APS - UNIP - 2016</p>
-	</footer>
+
+
 </body>
 </html>
