--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -8,37 +8,40 @@
 <link href="../css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <link href="../css/bootstrap/bootstrap-theme.min.css" rel="stylesheet">
 <link href="../css/estiloSistema/estiloIndex.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script type="text/javascript" src="../javaScript/jquery/jquery-2.1.4.js"></script>
-<script type="text/javascript" src="../javaScript/bootstrap/bootstrap.min.js"></script>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
+<script type="text/javascript"
+	src="../javaScript/jquery/jquery-2.1.4.js"></script>
+<script type="text/javascript"
+	src="../javaScript/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="../javaScript/scriptSistema/aps.js"></script>
 </head>
 
 <body>
 
 	<div class="col-xs-5">
-	<nav id="nav-btn" onclick="slidetoggle()">
- <i class="material-icons">menu</i>
-</nav>
-</div>
-<div class="col-xs-7">
-  <h3>Água+</h3>
-</div>
+		<nav id="nav-btn">
+			<i class="material-icons">menu</i>
+		</nav>
+	</div>
+	<div class="col-xs-7">
+		<h3>Água+</h3>
+	</div>
 
-<section id="nav-slide">
-  
-    <ul class="nav nav-pills nav-stacked">
+	<section id="nav-slide">
 
-      <li role="presentation" class="active"><a href="#" id="btnHome">Home</a></li>
-      <li role="presentation"><a href="#" id="btnPqEconomizar">Por
-          que economizar?</a></li>
-      <li role="presentation"><a href="#" id="btnComoEcon">Como
-          economizar?</a></li>
-      <li role="presentation"><a href="#" id="btnCalcule">Calcule
-          seu consumo</a></li>
-    </ul>
-  
-</section>
+		<ul class="nav nav-pills nav-stacked">
+
+			<li role="presentation" class="active"><a href="#" id="btnHome">Home</a></li>
+			<li role="presentation"><a href="#" id="btnPqEconomizar">Por
+					que economizar?</a></li>
+			<li role="presentation"><a href="#" id="btnComoEcon">Como
+					economizar?</a></li>
+			<li role="presentation"><a href="#" id="btnCalcule">Calcule
+					seu consumo</a></li>
+		</ul>
+
+	</section>
 	<!--FIM DO MENU-->
 
 	<div class="jumbotron">
@@ -46,15 +49,19 @@
 		<div id="idHome">
 
 			<!--CONTEUDO DO HOME-->
-			<p>Com o app Água+, você ficará por dentro de todas as novidades sobre economia de água.</P>
+			<p>Com o app Água+, você ficará por dentro de todas as novidades
+				sobre economia de água.</P>
 
 		</div>
-    <br>
+		<br>
 		<div id="idPqEconomizar">
 
 			<!--CONTEUDO DA TELA PQ ECONOMIZAR-->
 
-			<p>Estudos sobre o sistema hídrico mundial são unânimes em indicar que, se a média de consumo global de água não diminuir no curto prazo, teremos problemas de escassez. O Brasil, que tem uma parcela significativa de água doce, também está ameaçado.</p>
+			<p>Estudos sobre o sistema hídrico mundial são unânimes em
+				indicar que, se a média de consumo global de água não diminuir no
+				curto prazo, teremos problemas de escassez. O Brasil, que tem uma
+				parcela significativa de água doce, também está ameaçado.</p>
 
 		</div>
 
