--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -21,7 +21,7 @@
 
 	<div class="col-xs-5">
 		<nav id="nav-btn">
-			<i class="material-icons">menu</i>
+			<i id="btnMenu" class="material-icons">menu</i>
 		</nav>
 	</div>
 	<div class="col-xs-7">
