Calculo Consumo de Agua

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -104,65 +104,56 @@
   <div class="col-xs-12">
   <label>Quantas vezes você utiliza a máquina de lavar POR SEMANA?</label>
     <div class="input-group">
-      <input type="number" class="form-control">
+      <input type="number" class="form-control" id="maquinaLavar">
     </div>
   </div>
 
     <div class="col-xs-12">
   <label>Por quantos minutos você usa o tanque POR DIA?</label>
     <div class="input-group">
-      <input type="number" class="form-control">
+      <input type="number" class="form-control" id="tanque">
     </div>
   </div>
 
       <div class="col-xs-12">
   <label>Quantas vezes você dá descarga POR DIA?</label>
     <div class="input-group">
-      <input type="number" class="form-control">
+      <input type="number" class="form-control" id="descarga">
     </div>
   </div>
 
       <div class="col-xs-12">
   <label>Por quantos minutos você usa a pia do banheiro POR DIA?</label>
     <div class="input-group">
-      <input type="number" class="form-control">
+      <input type="number" class="form-control" id="piaBanheiro">
     </div>
   </div>
 
         <div class="col-xs-12">
   <label>Por quantos minutos você deixa o chuveiro ligado POR DIA?</label>
     <div class="input-group">
-      <input type="number" class="form-control">
+      <input type="number" class="form-control" id="chuveiro">
     </div>
   </div>
   
           <div class="col-xs-12">
   <label>Por quantos minutos você usa a pia da cozinha POR DIA?</label>
     <div class="input-group">
-      <input type="number" class="form-control">
+      <input type="number" class="form-control" id="piaCozinha">
     </div>
   </div>
 
           <div class="col-xs-12">
   <label>Quantas vezes você utiliza a lava-louças POR SEMANA?</label>
     <div class="input-group">
-      <input type="number" class="form-control">
+      <input type="number" class="form-control" id="lavaLoucas">
     </div>
   </div>
 
-            <div class="col-xs-12">
-  <label>Quantas vezes você utiliza a lava-louças POR SEMANA?</label>
-    <div class="input-group">
-      <input type="number" class="form-control">
-    </div>
-  </div>
-
-  
-
-  <div class="row col-xs-12">
+  <div class="row col-xs-12"> 
   <div class="btn-group" role="group" aria-label="...">
-  <button type="button" class="btn btn-default">Limpar</button>
-  <button type="button" class="btn btn-default">Calcular</button>
+  <button type="button" class="btn btn-default" id="limpar">Limpar</button>
+  <button type="button" class="btn btn-default" id="calcular">Calcular</button>
   
 </div>
 </div>
